--- a/tiebaAdmin-api/.gitignore
+++ b/tiebaAdmin-api/.gitignore
@@ -2,8 +2,7 @@
 /aiotieba.toml
 /cmd_handler.toml
 /setting.toml
-/.cache/变身嫁人小说.sqlite
-/log/server.log
+/.cache/
 /keyword.json
 /keyword.json.bak
 /log/
