--- a/tiebaAdmin-web/package.json
+++ b/tiebaAdmin-web/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "pinia": "^2.0.36",
     "vant": "^4.3.1",
     "vue": "^3.3.2",
