--- a/tiebaAdmin-api/Dockerfile
+++ b/tiebaAdmin-api/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.10.10-buster
 
 WORKDIR /tieba
 
-COPY . .
+VOLUME /tieba /www/wwwroot/tiebaAdmin
 
 RUN apt-get update && pip install -r requirements.txt
 
