--- a/tieba-admin-web/package.json
+++ b/tieba-admin-web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.2",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
