--- a/.github/workflows/compile_web.yml
+++ b/.github/workflows/compile_web.yml
@@ -25,7 +25,7 @@ jobs:
           cwd: ./tieba-admin-web
           branches: |
             [
-              "main",
+              "main"
             ]
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
