--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,16 +8,31 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./tieba-admin-server
     steps:
       -
         name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install dependencies
+        run: npm install
+        working-directory: .././tieba-admin-web
+      - name: Build
+        run: npm run build
+        working-directory: .././tieba-admin-web
+
       -
         name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
-          context: ./tieba-admin-web
           images: |
             adk23333/tieba-admin
           tags: |
@@ -34,7 +49,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./tieba-admin-web
+          context: .
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
